@@ -1,6 +1,7 @@
 WebHelpers ChangeLog
 
 0.6.3 (tip)
+* Bugfix in distribute() found by Randy Syring.
 
 0.6.2 (10/2/2008)
 * nl2br() and format-paragraphs were not literal-safe.
